--- a/css/styles.css
+++ b/css/styles.css
@@ -10077,7 +10077,8 @@ hr.light {
   }
   #mainNav.navbar-scrolled {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: #f7f7f7;
+    padding: 6px;
   }
   #mainNav.navbar-scrolled .navbar-brand {
     color: #212529;
