--- a/css/styles.css
+++ b/css/styles.css
@@ -2471,7 +2471,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
+  background-color: #1b4774;
   border-color: #f4623a;
 }
 .btn-primary:hover {
