--- a/css/styles.css
+++ b/css/styles.css
@@ -6169,7 +6169,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #1b1b1b !important; //343a40
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
