--- a/css/styles.css
+++ b/css/styles.css
@@ -6099,7 +6099,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4623a !important;
+  background-color: #1b4774 !important; //f4623a
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
