--- a/css/styles.css
+++ b/css/styles.css
@@ -10149,7 +10149,7 @@ header.masthead h1 {
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(244, 98, 58, 0.9);
+  background: rgba(43, 87, 132, 0.9); //(244, 98, 58, 0.9);
   transition: opacity 0.25s ease;
   text-align: center;
 }
